# raspberry-auto

./: .gitignore  LICENSE  README.md
Demonstration/: clawControl.py  cloudZeroAdjustment-noAI.py  cloudZeroAdjustment.py  motion_recognition.py  speechTool.py
Demonstration/speech_tool/: __init__.py
artificial-intelligence/: speechTool.py  speech_compound.py  speech_recogniation.py
artificial_intelligence/: speech-compound.py  speech-recogniation.py
chart-recognition/: by_thermometer.py  money_hsv_color.py  money_roi_color.py  money_roi_enginer.py
cxx/AOIDemo/: CMakeLists.txt
cxx/ColorBlock/: CMakeLists.txt  summary.md
cxx/DrawOperation/: CMakeLists.txt  summary.md
cxx/FaceCatch/: CMakeLists.txt
cxx/ImageShow/: CMakeLists.txt
cxx/QTcontrol/: CMakeLists.txt
cxx/VideoPlayer/: CMakeCache.txt  CMakeLists.txt  Makefile  VideoPlayer  cmake_install.cmake  summary.md
demonstration/: catchFrog.py  clawControl.py  cloudZeroAdjustment-noAI.py  cloudZeroAdjustment.py  motion_recognition.py  moveEnginger.py  speechTool.py
demonstration/speech_tool/: __init__.py  (+1 more)
doc/: TTS.md  install.md
equipment/: demo4cuda.py  demo4opencv.py  detector_by_model_lcd.py  detector_video.py  target_reader.py  yolo_demo.py
opencv-integrate/cxx/ImageShow/: CMakeLists.txt  summary.md
opencv-integrate/cxx/ImageShow/src/: ImageShow.cpp
py/: 8-learn.py  colorBlock.py  colorBlock_blue.py  color_tracking.py  face_tracking.py  find_hsv.py  motion_recognition.py  readColorFromImage.py  readImage.py  thuglif_cam.py  videoPlay.py
python-trial/: logic_center_calculation.py
(+63 files in other folders)
